# DeepRec

./: .bazelrc  README_ONEDNN.md  RELEASE.md  ci_build  run.sh
.github/workflows/: DeepRec_UT.yml  Upstream_Sync.yml  pkg_building.yml
cibuild/: cpu-ut.sh
jarvis/: README.md
jarvis/Dockerfile/: CPU-dev.Dockerfile  CPU-test.Dockerfile  GPU-dev.Dockerfile  GPU-test.Dockerfile  cpu-ci-inside.Dockerfile  cpu-ci.Dockerfile
jarvis/docs/: Benchmark-test.md  DeepRec-Ops-Perf-demo.xlsx
modelzoo/: README.md  template.py
modelzoo/BST/: README.md  train.py
modelzoo/DBMTL/: README.md  train.py
modelzoo/DIEN/: train.py
modelzoo/DIN/: train.py
modelzoo/DLRM/: README.md  train.py
modelzoo/DSSM/: train.py  train_emb.py
tensorflow/: BUILD  tensorflow.bzl  workspace.bzl
tensorflow/core/kernels/tuning_ops/host/: CMakeLists.txt  README.md
tensorflow/core/kernels/tuning_ops/host/include/: Common.h  OptimizerIF.h  Suite.h
tensorflow/core/kernels/tuning_ops/host/include/DataTypes/: Individual.h  MapMapToFloat.h  MapStringToFloat.h  MapStringToInt.h  MapStringToPtr.h  MapStringToString.h  MapVectorToMap.h  Matrix.h  VectorFloat.h  VectorFloatToMap.h  VectorIndividual.h  VectorInt.h  VectorMap.h  VectorPair.h  VectorString.h  VectorVectorFloat.h  VectorVectorInt.h  VectorVectorString.h
tensorflow/core/kernels/tuning_ops/host/suite/: pta.c
tensorflow/core/kernels/tuning_ops/host/suite/Ackley/: Ackley.h
tensorflow/core/kernels/tuning_ops/host/suite/ExpSinFunc/: ExpSinFunc.h
tensorflow/core/kernels/tuning_ops/host/suite/NetworkAI/: NetworkAI.h
(+135 files in other folders)
